 * All missions: Fix incorrect crate types
 * Fix swapped mission preview images of missions 2 and 3

A Space Adventure:
 + A few campaign missions now save your personal best successes (e.g. fastest finish in Hard Flying) which get shown after you finish them agin
 + Add skip to a few missions where it doesn't hurt
 + Menu: Show 2 flowers over fully completed planets (with side missions)
 * Hard Flying: Fix ending in a Lua error
 * The First Stop: Fix stats screen showing teams twice
 * Killing The Specialists: Fix killing hog with Deagle gave you chance to use another weapon in same turn
 * Fix weird behaviour when walking right before the first animation in most missions
 * Fix a coupe of texts being untranslatable
 * Fix typos
 * All missions: Fix incorrect crate types

Missions:
 + New scenario: Teamwork 2
 + New scenario: Big Armory
 + New training: Basic Flying Saucer Training
 + Rope-Knocking Challenge was improved (now awards score based on kills and time; taunts for knocking out hedgehogs)
 + Rewrote some help texts in basic rope training
 + Graphical effect (black bars) while in cut scenes
 + Change description and icon for baseball bat in Knockball mission map
 * Portal Mind Challenge was cleaned up and reworked (especially less awful wording)
 * Fixed Target Practice missions getting stuck when a target dropped into water
 * Fixed mistakes and bad wording of strings in several missions, scripts and campaigns
 * Fixed Lua error messages and broken stats screen in Climb Home singleplayer mission

Frontend:
 + Campaign screen shows which campaigns and missions you've completed so far
 + Training screen now has 3 mission categories: Training (tutorials), Challenge (get a high score), Scenario (complete a task)
 + Replaced the Fort Mode game modifier by adding "Forts" to the map type selection. This makes the mode easier selectable/discoverable. Also the slider can be used to adjust the distance between forts.